@startuml
package "Domain Entities" {
    class User {
        - Long id
        - Mascot mascot
        - String bio
        - String username
        - String password
        - String email
        - Set<Role> roles
    }

    class Post {
        - Long id
        - String postTitle
        - String postSubTitle
        - String slug
        - String content
        - LocalDateTime createdAt
        - LocalDateTime lastUpdatedAt
        - LocalDateTime publishedAt
        - Status status
        - User author
        - Thread thread
        - List<Comment> comments
    }

    class Thread {
        - Long id
        - String name
        - List<Post> post
    }

    class Comment {
        - Long id
        - String body
        - LocalDateTime createdAt
        - LocalDateTime lastUpdatedAt
        - Post post
        - User user
        - Comment parent
        - Boolean isDeleted
        - List<Comment> replies
    }

    class Role {
        - Long id
        - String name
    }

    enum Status {
        DRAFT
        PUBLISHED
        ARCHIVED
    }

  enum Mascot {
    CAPYBARA
    LEMUR
    OCTOPUS
    RED_PANDA
    CHAMELEON
    OWL
    PENGUIN
    ORCA
  }
}

' Use "1" to "0..*" for standard One-to-Many
User "1" -- "0..*" Post : authors >
User "1" -- "0..*" Comment : writes >
User "0..*" -- "0..*" Role : has >

Thread "1" *-- "0..*" Post : contains >
Post "1" *-- "0..*" Comment : contains >

' Precise self-reference for threaded comments
Comment "0..1" <-- "0..*" Comment : parent / replies

' Enum association
Post ..> Status : state
User ..> Mascot : is a
@enduml